--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
 	"printWidth": 80,
 	"trailingComma": "es5",
 	"tabWidth": 2,
-	"useTabs": true,
+	"useTabs": false,
 	"semi": false,
 	"singleQuote": true
 }
