--- a/packages/userscript/package.json
+++ b/packages/userscript/package.json
@@ -1,21 +1,27 @@
 {
   "name": "@spxx/userscript",
-  "version": "0.1.0",
+  "version": "2.1.0",
   "description": "The userscript of spxx, the ultimate MCBBS newslord utility.",
-  "main": "index.js",
+  "main": "dist/bundle.user.js",
   "type": "module",
   "author": "SPXFellow",
   "license": "CC0-1.0",
   "private": false,
   "scripts": {
-    "build": "rollup -c"
+    "build": "tsc -b && rollup -c && rollup -c",
+    "prepublish": "tsc -b && rollup -c"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-typescript": "^8.2.5",
+    "@types/tampermonkey": "^4.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
     "rollup": "^2.58.0",
     "rollup-plugin-userscript-metablock": "^0.3.1",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   }
 }
