--- a/packages/userscript/tsconfig.json
+++ b/packages/userscript/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true
-  }
+    "allowSyntheticDefaultImports": true,
+    "outDir": "./out",
+    "rootDir": "./src"
+  },
+  "exclude": ["rollup.config.ts"]
 }
