--- a/packages/userscript/package.json
+++ b/packages/userscript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spxx/userscript",
-  "version": "2.1.0",
+  "version": "2.2.0-1",
   "description": "The userscript of spxx, the ultimate MCBBS newslord utility.",
   "main": "dist/bundle.user.js",
   "type": "module",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-typescript": "^8.2.5",
     "@types/tampermonkey": "^4.0.5",
