--- a/packages/dashboard-server/tsconfig.json
+++ b/packages/dashboard-server/tsconfig.json
@@ -13,5 +13,5 @@
     "moduleResolution": "node"
 	},
 	"include": ["src"],
-	"exclude": ["node_modules", "src/test"]
+	"exclude": ["node_modules", "src/test", "out"]
 }
