--- a/packages/userscript/tsconfig.json
+++ b/packages/userscript/tsconfig.json
@@ -3,5 +3,5 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist"
   },
-  "exclude": ["*.config.*", "out/*", "dist/*"]
+  "exclude": ["rollup.config.js", "out/**/*", "dist/**/*"]
 }
