--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# Yarn cache
-.yarn/cache/
-.yarnrc
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
