--- a/packages/userscript/package.json
+++ b/packages/userscript/package.json
@@ -6,21 +6,22 @@
   "type": "module",
   "author": "SPXFellow",
   "license": "CC0-1.0",
-  "private": false,
   "scripts": {
     "build": "tsc -b && rollup -c",
-    "prepublish": "tsc -b && rollup -c",
+    "prepack": "tsc -b && rollup -c",
     "watch": "rollup -w"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-typescript": "^8.2.5",
     "@types/tampermonkey": "^4.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
     "rollup": "^2.58.0",
     "rollup-plugin-userscript-metablock": "^0.3.1",
     "tslib": "^2.3.1",
