--- a/packages/tweeter/package.json
+++ b/packages/tweeter/package.json
@@ -10,12 +10,15 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "fs-extra": "^10.0.0",
-    "twitter-lite": "^1.1.0"
+    "koa": "^2.13.4",
+    "twitter-api-v2": "^1.10.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
-    "typescript": "^4.4.3"
+    "@types/koa": "^2.13.4",
+    "typescript": "^4.5.5"
   }
 }
