--- a/packages/tweeter/tsconfig.json
+++ b/packages/tweeter/tsconfig.json
@@ -1,17 +1,10 @@
 {
 	"compilerOptions": {
 		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"module": "esnext",
-		"target": "esnext",
 		"outDir": "./out",
-		"rootDir": "./src",
-		"lib": ["es6", "DOM", "DOM.Iterable"],
-		"sourceMap": true,
-		"strict": true,
-		"incremental": true,
-    "moduleResolution": "node"
+		"rootDir": "./src"
 	},
 	"include": ["src"],
-	"exclude": ["node_modules", "src/test", "out"]
+	"exclude": ["node_modules", "src/test", "out"],
+	"extends": "../../tsconfig.base.json"
 }
