New optimization towards Bedrock beta changelogs

--- a/packages/userscript/tsconfig.json
+++ b/packages/userscript/tsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
-    "rootDir": "src",
+    "rootDir": "src"
   },
   "include": ["src/**/*"],
-  "exclude": ["rollup.config.js", "out/**/*", "dist/**/*"],
+  "exclude": ["rollup.config.ts", "out/**/*", "dist/**/*"],
   "extends": "../../tsconfig.base.json"
 }
