--- a/packages/userscript/tsconfig.json
+++ b/packages/userscript/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "outDir": "./dist",
-    "rootDir": "src"
+    "outDir": ".",
+    "rootDir": ".",
+    "resolveJsonModule": true,
+    "composite": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["rollup.config.ts", "out/**/*", "dist/**/*"],
+  "files": ["package.json"],
   "extends": "../../tsconfig.base.json"
 }
