--- a/packages/userscript/src/tsconfig.json
+++ b/packages/userscript/src/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "../dist/",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "lib": ["esnext", "DOM", "DOM.Iterable"],
   },
   "references": [{ "path": "../" }]
 }
