--- a/packages/tweeter/package.json
+++ b/packages/tweeter/package.json
@@ -5,7 +5,6 @@
   "author": "SPXFellow",
   "license": "CC0-1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "tsc -b"
   },
@@ -13,12 +12,14 @@
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
     "koa": "^2.13.4",
-    "twitter-api-v2": "^1.12.0"
+    "twitter-api-sdk": "^1.0.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/koa": "^2.13.4",
+    "@types/node": "^17.0.31",
+    "@types/node-fetch": "^2.6.1",
     "typescript": "^4.6.4"
   }
 }
