--- a/packages/tweeter/tsconfig.json
+++ b/packages/tweeter/tsconfig.json
@@ -1,10 +1,17 @@
 {
-	"compilerOptions": {
-		"allowSyntheticDefaultImports": true,
-		"outDir": "./out",
-		"rootDir": "./src"
-	},
-	"include": ["src"],
-	"exclude": ["node_modules", "src/test", "out"],
-	"extends": "../../tsconfig.base.json"
+  "include": ["./src/**/*.ts"],
+  "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "downlevelIteration": true,
+    "outDir": "dist/",
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["esnext", "dom"],
+    "target": "esnext",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "strict": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true
+  }
 }
