--- a/packages/userscript/tsconfig.json
+++ b/packages/userscript/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
     "downlevelIteration": true,
     "outDir": ".",
     "rootDir": ".",
