--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,11 +1,13 @@
+compressionLevel: mixed
+
 nodeLinker: pnp
 
 npmPublishAccess: public
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: "@yarnpkg/plugin-typescript"
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
+yarnPath: .yarn/releases/yarn-4.0.0.cjs
 
-yarnPath: .yarn/releases/yarn-3.3.1.cjs
+packageExtensions:
+  "rollup@*":
+    dependencies:
+      "@rollup/plugin-typescript": "*"
+      "tslib": "*"
