--- a/packages/userscript/package.json
+++ b/packages/userscript/package.json
@@ -1,31 +1,31 @@
 {
   "name": "@spxx/userscript",
-  "version": "2.4.14",
+  "version": "2.4.15",
   "description": "The userscript of spxx, the ultimate MCBBS newslord utility.",
   "main": "dist/bundle.user.js",
   "type": "module",
   "author": "SPXFellow",
   "license": "CC0-1.0",
   "scripts": {
-    "build": "tsc -b && rollup -c",
-    "prepack": "tsc -b && rollup -c",
+    "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "prepack": "rollup",
     "watch": "rollup -w"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.16.7",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@types/tampermonkey": "^4.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "eslint": "^8.32.0",
-    "rollup": "^3.10.0",
-    "rollup-plugin-userscript-metablock": "^0.3.1",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4"
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@types/tampermonkey": "^4.20.4",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "eslint": "^8.52.0",
+    "rollup": "^4.1.4",
+    "rollup-plugin-userscript-metablock": "^0.3.3",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2"
   }
 }
