--- a/packages/userscript/src/tsconfig.json
+++ b/packages/userscript/src/tsconfig.json
@@ -3,7 +3,7 @@
     "rootDir": ".",
     "outDir": "../dist/",
     "resolveJsonModule": true,
-    "lib": ["esnext", "DOM", "DOM.Iterable"],
+    "lib": ["esnext", "DOM", "DOM.Iterable"]
   },
   "references": [{ "path": "../" }]
 }
