--- a/packages/userscript/tsconfig.json
+++ b/packages/userscript/tsconfig.json
@@ -5,8 +5,7 @@
     "downlevelIteration": true,
     "outDir": ".",
     "rootDir": ".",
-    "resolveJsonModule": true,
-    "composite": true
+    "resolveJsonModule": true
   },
   "include": ["package.json", "rollup.config.ts"],
   "extends": "../../tsconfig.base.json"
