--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,5 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# Yarn
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# pnpm
+package-lock.json
